26-07-2019 - 20:47 (Fix Evaluación Final CSS)

--- a/stylesheet/styles.css
+++ b/stylesheet/styles.css
@@ -69,7 +69,13 @@ img{
     width:100%;
   }
 
+  .sec2 img:hover{
+    transform: translate(20px, -5px);
+    box-shadow: 2px 2px 2px #82c3a6;
+  }
+
   .sec2 img{
+    transition-duration: 1s;
     width: 100%;
   }
 
